# PDF_Product_Extract

./: .gitignore  README.md  TEXT_EXTRACTION_README.md  app.py  enhanced_text_extractor.py  image.py  improved_combined_extractor.py  logger.py  main.js  main.py  ocr_organizer.py  ocr_processor.py  pyproject.toml  rendered_product.html  simple_text_extractor.py  streamlit_app.py  template.html  text_main.py  text_only_processor.py  text_to_frontend_converter.py
output/: text.txt
static/: product_page.html
